--- a/3. Data structures and Methods/3.3 Strings/in_class_demo.ipynb
+++ b/3. Data structures and Methods/3.3 Strings/in_class_demo.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Gabe-flomo/Python-Course/blob/main/Modules/3.%20Data%20structures%20and%20Methods/3.3%20Strings/in_class_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -39,11 +39,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "6h1iv1kWzv3n"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'\\nhello \\ngoodbye\\nhow are you\\n'"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO Create a multiline string on a single line\n",
         "\n"
@@ -51,13 +62,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "Wnd6zr1Hzv3n"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'\\nTHis is a line\\nthis is another\\nthis is another\\n'"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "#TODO Create a multiline string over multiple lines\n"
+        "#TODO Create a multiline string over multiple lines\n",
+        "\"\"\"\n",
+        "THis is a line\n",
+        "this is another\n",
+        "this is another\n",
+        "\"\"\""
       ]
     },
     {
@@ -75,27 +102,63 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "GkVBkOxZzv3o"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hello world\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "'Hell99 w99rld'"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO replace 'world' with 'universe' in the string\n",
-        "var = \"Hello world\"\n"
+        "var = \"Hello world\"\n",
+        "print(var)\n",
+        "var = var.replace('o', '99')\n",
+        "var\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "SvOSKb4Tzv3o"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "My name is gabe\n",
+            "My name is nathan\n",
+            "My name is nene\n",
+            "My name is aaron\n"
+          ]
+        }
+      ],
       "source": [
         "#TODO replace the placeholder with the names in the list\n",
         "names = ['gabe', 'nathan', 'nene', 'aaron']\n",
-        "string = \"My name is placeholder\"\n"
+        "string = \"My name is placeholder\"\n",
+        "\n",
+        "for name in names:\n",
+        "    string2 = string.replace('placeholder', name)\n",
+        "    print(string2)\n"
       ]
     },
     {
@@ -137,26 +200,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "tlB3mcubzv3o"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['Hello world 👋🏾']"
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO split a string using the default delimeter\n",
-        "var = \"Hello world 👋🏾\"\n"
+        "var = \"Hello world 👋🏾\"\n",
+        "var.split()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "wABYqrDSzv3o"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['I', 'am', 'a', 'hyphenated', 'string']"
+            ]
+          },
+          "execution_count": 17,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO split a string using a custom delimeter\n",
-        "var = \"I-am-a-hyphenated-string\"\n"
+        "var = \"I-am-a-hyphenated-string\"\n",
+        "var.split(\"-\")"
       ]
     },
     {
@@ -188,26 +275,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "qo6cNQ5bzv3p"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Gabe Nathan Nene Aaron'"
+            ]
+          },
+          "execution_count": 18,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO join the list using a space\n",
-        "var = ['Gabe', 'Nathan', 'Nene', 'Aaron']"
+        "var = ['Gabe', 'Nathan', 'Nene', 'Aaron']\n",
+        "var = \" \".join(var)\n",
+        "var"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "BvCZJf54zv3p"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Gabe, Nathan, Nene, Aaron'"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO join the list using a comma\n",
-        "var = ['Gabe', 'Nathan', 'Nene', 'Aaron']"
+        "var = ['Gabe', 'Nathan', 'Nene', 'Aaron']\n",
+        "var = \", \".join(var)\n",
+        "var"
       ]
     },
     {
@@ -241,14 +354,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "ZW8ur6VCzv3p"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'convert me'"
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# TODO convert the strings to lowercase\n",
-        "var = \"COnvert ME\"\n"
+        "var = \"COnvert ME\"\n",
+        "var = var.lower()\n",
+        "var\n"
       ]
     },
     {
@@ -262,26 +388,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "KJimbJWXzv3p"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 22,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO: use the .islower() method to check if a string is lowercase.\n",
-        "var = \"Is This String Lowercase?\"\n"
+        "var = \"Is This String Lowercase?\"\n",
+        "var.islower()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "xsS7VEXNzv3p"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(True, 'is this string lowercase?')"
+            ]
+          },
+          "execution_count": 24,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Convert the string from above to lowercase and call the .islower() method again. \n",
-        "var = var.lower()\n"
+        "var = var.lower()\n",
+        "var.islower(), var\n"
       ]
     },
     {
@@ -301,14 +451,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "vYcRq02Yzv3q"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'PLEASE MAKE ME BIGGER'"
+            ]
+          },
+          "execution_count": 25,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO: Make the text all upper case\n",
-        "var = \"please make me bigger\"\n"
+        "var = \"please make me bigger\"\n",
+        "var.upper()\n"
       ]
     },
     {
@@ -322,14 +484,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "SbSO2InFzv3q"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(True, 'AM I UPPER CASE?')"
+            ]
+          },
+          "execution_count": 28,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO: Check to see if the string is already upper case\n",
-        "var = \"Am i Upper CASE?\"\n"
+        "var = \"Am i Upper CASE?\"\n",
+        "var = var.upper()\n",
+        "var.isupper(), var\n"
       ]
     },
     {
@@ -349,14 +524,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "id": "nH24tlZXzv3q"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Spiderman: Take Me Home'"
+            ]
+          },
+          "execution_count": 29,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO: Convert the movie title into the valid title format\n",
-        "movie = \"spiderman: take me home\"\n"
+        "movie = \"spiderman: take me home\"\n",
+        "movie.title()\n"
       ]
     },
     {
@@ -370,14 +557,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "id": "UDpytSx1zv3r"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 32,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO: Is the string a title??\n",
-        "book = \"This book Has No title\"\n"
+        "book = \"This Book Has No Title\"\n",
+        "book.istitle()\n"
       ]
     },
     {
@@ -416,14 +615,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "id": "DTPOqkFFzv3r"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(4, 4, 10, 1)"
+            ]
+          },
+          "execution_count": 36,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "#TODO Count the occureences of 'he', 'hello', 'o', and 'world world' in the string\n",
-        "var = \"Hello world, hello world hello world world hello hello world\"\n"
+        "#TODO Count the occurences of 'he', 'hello', 'o', and 'world world' in the string\n",
+        "var = \"Hello world, hello world hello world world hello hello world\"\n",
+        "var.count(\"he\"), var.count(\"hello\"), var.count(\"o\"), var.count('world world')\n"
       ]
     },
     {
@@ -443,14 +654,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
         "id": "CpizjBE2zv3r"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "234\n",
+            "999\n"
+          ]
+        }
+      ],
       "source": [
         "#TODO Check to see which of the strings are numeric\n",
-        "var = [\"Hello\", \"234\", 'N1c3', \"Im numeric\", '999', '23o1']\n"
+        "var = [\"Hello\", \"234\", 'N1c3', \"Im numeric\", '999', '23o1']\n",
+        "for i in var:\n",
+        "    \n",
+        "    if i.isnumeric():\n",
+        "        print(i)\n",
+        "\n"
       ]
     },
     {
@@ -459,27 +684,38 @@
         "id": "GPMUKc5rzv3r"
       },
       "source": [
-        "# isalum\n",
+        "# isalnum\n",
         "This method is used to determine if the string contains any alpha-numeric characters. If there are any non alpha-numeric charaters in the string, it will return `False`\n",
         "\n",
         "```python \n",
-        "\"h3ll0\".isalum() -> # True\n",
-        "\"Hello\".isalum() -> # True\n",
-        "\"..no\".isalum() -> # False\n",
-        "\"3.1415\".isalum() -> # False\n",
+        "\"h3ll0\".isalnum() -> # True\n",
+        "\"Hello\".isalnum() -> # True\n",
+        "\"..no\".isalnum() -> # False\n",
+        "\"3.1415\".isalnum() -> # False\n",
         "```"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "metadata": {
         "id": "PGWyUvXtzv3r"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hello\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO determine which string contains non alpha-numeric characters\n",
-        "var = [\"Hello\", \"I am 22 years old\", \"This has punctuation!!\"]"
+        "var = [\"Hello\", \"I am 22 years old\", \"This has punctuation!!\"]\n",
+        "for string in var:\n",
+        "    if string.isalnum():\n",
+        "        print(string)"
       ]
     },
     {
@@ -509,28 +745,54 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {
         "id": "yD6ydpf7zv3r"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "3 pictures are png\n"
+          ]
+        }
+      ],
       "source": [
         "#TODO given a list of files names, count how many end with .png\n",
         "pictures = ['picture.png', 'picture.png', 'picture.gif', 'picture.mp4', 'picture.png', 'picture.jpg']\n",
         "count = 0\n",
+        "for string in pictures:\n",
+        "    if string.endswith(\".png\"):\n",
+        "        count += 1\n",
+        "\n",
+        "print(f\"{count} pictures are png\")\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "metadata": {
         "id": "No0Dv9sVzv3r"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "apple\n",
+            "anger\n",
+            "appetite\n"
+          ]
+        }
+      ],
       "source": [
         "#TODO given a list of words, see which ones start with the letter 'a'\n",
-        "words = ['apple', 'orange', 'anger', 'sadness', 'appetite', 'full']\n"
+        "words = ['apple', 'orange', 'anger', 'sadness', 'appetite', 'full']\n",
+        "for i in words:\n",
+        "    if i.startswith(\"a\"):\n",
+        "        print(i)\n"
       ]
     },
     {
@@ -544,19 +806,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {
         "id": "FXSvVEQBzv3r"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "umbrella\n"
+          ]
+        }
+      ],
       "source": [
         "#TODO Check to see if the words start with vowels\n",
         "vowels = ('a','e','i','o','u')\n",
-        "words = ['friend', 'array', 'ergonomic', 'ostrich', 'happy', 'yellow', 'thot', 'umbrella']\n"
+        "words = ['friend', 'array', 'ergonomic', 'ostrich', 'happy', 'yellow', 'thot', 'umbrella']\n",
+        "for word in words:\n",
+        "    if word.startswith(vowels) and word.endswith(vowels):\n",
+        "        print(word)\n"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "name": "in_class_demo.ipynb",
+      "provenance": []
+    },
     "interpreter": {
       "hash": "fd61235da8d855c081cbd5d7c6398e4c179a40a950675235256f7f30499f1124"
     },
@@ -574,14 +852,9 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.8.9"
     },
-    "orig_nbformat": 4,
-    "colab": {
-      "name": "in_class_demo.ipynb",
-      "provenance": [],
-      "include_colab_link": true
-    }
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
