--- a/3. Data structures and Methods/3.3 Strings/string_tasks.ipynb
+++ b/3. Data structures and Methods/3.3 Strings/string_tasks.ipynb
@@ -45,11 +45,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "8Tleo1v_zy10"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'Title': 'Star Wars Episode 1', 'Duration': None, 'Release Year': ''},\n",
+              " {'Title': 'Jungle Book', 'Duration': '103', 'Release Year': None},\n",
+              " {'Title': 'Interstellar', 'Duration': '150', 'Release Year': '2014'},\n",
+              " {'Title': None, 'Duration': '', 'Release Year': ''},\n",
+              " {'Title': 'Star Wars Episode 2', 'Duration': '126', 'Release Year': None},\n",
+              " {'Title': 'Toy story 4', 'Duration': None, 'Release Year': '2019'}]"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "var = [\n",
         "    {\n",
@@ -78,7 +94,22 @@
         "        'Duration': \"\",\n",
         "        'Release Year': \"2019\"\n",
         "    },\n",
-        "]"
+        "]\n",
+        "\n",
+        "for i in range(len(var)):\n",
+        "    data = var[i]\n",
+        "    title = data['Title']\n",
+        "    duration = data['Duration']\n",
+        "    year = data['Release Year']\n",
+        "\n",
+        "    if title == \"\":\n",
+        "        var[i][\"Title\"] = None\n",
+        "    elif duration == \"\":\n",
+        "        var[i]['Duration'] = None\n",
+        "    elif year == \"\":\n",
+        "        var[i]['Release Year'] = None\n",
+        "    \n",
+        "var\n"
       ]
     },
     {
@@ -114,14 +145,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "5fNakBuDzy11"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[['If', 'you', 'are', 'ill', 'you', 'ought', 'to', 'see', 'a', 'doctor'],\n",
+              " ['When',\n",
+              "  'the',\n",
+              "  'snow',\n",
+              "  'stops',\n",
+              "  'falling',\n",
+              "  \"we'll\",\n",
+              "  'shovel',\n",
+              "  'the',\n",
+              "  'driveway'],\n",
+              " ['While',\n",
+              "  'I',\n",
+              "  'was',\n",
+              "  'eating',\n",
+              "  'the',\n",
+              "  'cat',\n",
+              "  'scratched',\n",
+              "  'at',\n",
+              "  'the',\n",
+              "  'door']]"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "var = ['If you are ill, you ought to see a doctor', \"When the snow stops falling, we'll shovel the driveway\", 'While I was eating, the cat scratched at the door']\n",
-        "#TODO\n"
+        "#TODO\n",
+        "for i in range(len(var)):\n",
+        "    line = var[i]\n",
+        "    line = line.replace(\",\", \"\").split()\n",
+        "    var[i] = line\n",
+        "\n",
+        "var"
       ]
     },
     {
@@ -156,17 +223,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "TlgKQuD3zy12"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "There were 3 words with repeating characters ['ballhawk', 'bookies', 'lawlessly']\n"
+          ]
+        }
+      ],
       "source": [
         "import requests\n",
         "def get_word():\n",
         "    word = requests.get(\"https://random-word-api.herokuapp.com/word?number=20\").json()\n",
         "    return word\n",
-        "\n"
+        "\n",
+        "words = get_word()\n",
+        "repeats = []\n",
+        "for word in words:\n",
+        "    for index in range(len(word) - 1):\n",
+        "        current = word[index]\n",
+        "        next = word[index + 1]\n",
+        "        if current == next:\n",
+        "            repeats.append(word)\n",
+        "\n",
+        "print(f\"There were {len(repeats)} words with repeating characters {repeats}\")"
       ]
     },
     {
@@ -215,13 +300,221 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "id": "kFH2FiS9zy13"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'t': 1,\n",
+              "  'a': 1,\n",
+              "  'g': 1,\n",
+              "  'i': 1,\n",
+              "  'n': 2,\n",
+              "  'unique characters': 5,\n",
+              "  'word': 'anting'},\n",
+              " {'o': 2,\n",
+              "  'd': 1,\n",
+              "  'c': 1,\n",
+              "  'a': 2,\n",
+              "  'r': 1,\n",
+              "  'b': 1,\n",
+              "  'g': 2,\n",
+              "  'i': 1,\n",
+              "  'unique characters': 8,\n",
+              "  'word': 'braggadocio'},\n",
+              " {'o': 1,\n",
+              "  't': 1,\n",
+              "  'c': 2,\n",
+              "  'u': 1,\n",
+              "  's': 1,\n",
+              "  'a': 1,\n",
+              "  'g': 1,\n",
+              "  'i': 1,\n",
+              "  'n': 2,\n",
+              "  'unique characters': 9,\n",
+              "  'word': 'accountings'},\n",
+              " {'o': 1,\n",
+              "  'd': 2,\n",
+              "  'g': 2,\n",
+              "  'i': 1,\n",
+              "  'n': 1,\n",
+              "  'unique characters': 5,\n",
+              "  'word': 'godding'},\n",
+              " {'t': 2,\n",
+              "  'l': 1,\n",
+              "  'e': 1,\n",
+              "  'u': 1,\n",
+              "  'a': 1,\n",
+              "  'r': 2,\n",
+              "  'b': 1,\n",
+              "  'i': 1,\n",
+              "  'unique characters': 8,\n",
+              "  'word': 'triturable'},\n",
+              " {'t': 1,\n",
+              "  'e': 1,\n",
+              "  's': 2,\n",
+              "  'a': 1,\n",
+              "  'r': 1,\n",
+              "  'v': 1,\n",
+              "  'h': 1,\n",
+              "  'm': 1,\n",
+              "  'i': 1,\n",
+              "  'n': 1,\n",
+              "  'unique characters': 10,\n",
+              "  'word': 'ravishments'},\n",
+              " {'o': 1,\n",
+              "  'd': 1,\n",
+              "  'c': 1,\n",
+              "  'e': 1,\n",
+              "  's': 1,\n",
+              "  'a': 2,\n",
+              "  'g': 1,\n",
+              "  'n': 1,\n",
+              "  'unique characters': 8,\n",
+              "  'word': 'gasconade'},\n",
+              " {'o': 1,\n",
+              "  't': 1,\n",
+              "  'y': 2,\n",
+              "  's': 2,\n",
+              "  'm': 1,\n",
+              "  'i': 1,\n",
+              "  'n': 2,\n",
+              "  'unique characters': 7,\n",
+              "  'word': 'synonymist'},\n",
+              " {'o': 1,\n",
+              "  'd': 1,\n",
+              "  'e': 1,\n",
+              "  's': 1,\n",
+              "  'a': 1,\n",
+              "  'r': 1,\n",
+              "  'b': 1,\n",
+              "  'w': 1,\n",
+              "  'unique characters': 8,\n",
+              "  'word': 'sowbread'},\n",
+              " {'e': 2,\n",
+              "  'u': 1,\n",
+              "  's': 2,\n",
+              "  'a': 2,\n",
+              "  'm': 1,\n",
+              "  'n': 2,\n",
+              "  'unique characters': 6,\n",
+              "  'word': 'amanuenses'},\n",
+              " {'o': 1,\n",
+              "  't': 1,\n",
+              "  'c': 1,\n",
+              "  'e': 1,\n",
+              "  'f': 1,\n",
+              "  'u': 1,\n",
+              "  's': 1,\n",
+              "  'n': 1,\n",
+              "  'unique characters': 8,\n",
+              "  'word': 'confutes'},\n",
+              " {'c': 2,\n",
+              "  'h': 1,\n",
+              "  'a': 1,\n",
+              "  'g': 1,\n",
+              "  'i': 1,\n",
+              "  'n': 1,\n",
+              "  'unique characters': 6,\n",
+              "  'word': 'caching'},\n",
+              " {'t': 2,\n",
+              "  'c': 1,\n",
+              "  'l': 1,\n",
+              "  'e': 2,\n",
+              "  'u': 1,\n",
+              "  'a': 2,\n",
+              "  'r': 1,\n",
+              "  'b': 1,\n",
+              "  'unique characters': 8,\n",
+              "  'word': 'trabeculate'},\n",
+              " {'o': 1,\n",
+              "  'd': 1,\n",
+              "  't': 1,\n",
+              "  'l': 1,\n",
+              "  'e': 2,\n",
+              "  'y': 1,\n",
+              "  's': 1,\n",
+              "  'a': 1,\n",
+              "  'm': 1,\n",
+              "  'i': 2,\n",
+              "  'n': 2,\n",
+              "  'unique characters': 11,\n",
+              "  'word': 'demyelinations'},\n",
+              " {'o': 2,\n",
+              "  'p': 1,\n",
+              "  'l': 1,\n",
+              "  'e': 1,\n",
+              "  's': 2,\n",
+              "  'h': 1,\n",
+              "  'm': 1,\n",
+              "  'a': 1,\n",
+              "  'i': 1,\n",
+              "  'unique characters': 9,\n",
+              "  'word': 'homoplasies'},\n",
+              " {'d': 1,\n",
+              "  'e': 1,\n",
+              "  'a': 1,\n",
+              "  'r': 1,\n",
+              "  'g': 1,\n",
+              "  'i': 1,\n",
+              "  'n': 1,\n",
+              "  'unique characters': 7,\n",
+              "  'word': 'reading'},\n",
+              " {'e': 1, 'o': 2, 'r': 1, 'w': 1, 'unique characters': 4, 'word': 'wooer'},\n",
+              " {'d': 1,\n",
+              "  'c': 1,\n",
+              "  'e': 1,\n",
+              "  'a': 1,\n",
+              "  'r': 1,\n",
+              "  'i': 1,\n",
+              "  'n': 2,\n",
+              "  'unique characters': 7,\n",
+              "  'word': 'crannied'},\n",
+              " {'o': 1,\n",
+              "  't': 2,\n",
+              "  'p': 2,\n",
+              "  'l': 1,\n",
+              "  'e': 1,\n",
+              "  'u': 1,\n",
+              "  'r': 1,\n",
+              "  'i': 1,\n",
+              "  'n': 1,\n",
+              "  'unique characters': 9,\n",
+              "  'word': 'pluripotent'},\n",
+              " {'e': 1,\n",
+              "  'f': 1,\n",
+              "  's': 1,\n",
+              "  'a': 1,\n",
+              "  'r': 1,\n",
+              "  'b': 1,\n",
+              "  'i': 2,\n",
+              "  'unique characters': 7,\n",
+              "  'word': 'basifier'}]"
+            ]
+          },
+          "execution_count": 27,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "#TODO"
+        "#TODO\n",
+        "words = get_word()\n",
+        "counts = []\n",
+        "\n",
+        "for word in words:\n",
+        "    unique_words = set(word)\n",
+        "    count = {}\n",
+        "    for token in unique_words:\n",
+        "        count.setdefault(token, word.count(token))\n",
+        "    count['unique characters'] = len(unique_words)\n",
+        "    count[\"word\"] = word\n",
+        "    counts.append(count)\n",
+        "\n",
+        "counts"
       ]
     },
     {
@@ -269,11 +562,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 67,
       "metadata": {
         "id": "Q-04NkjAzy14"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'34 45 85 39 56 22 27 22 87 20 5 8 22 26 12 7 85 3 20 55 57 7 55 81 0 70 32 84 63 26 77 55 68 71 72 32 10 51 22 79 86 61 68 26 53 89 17 65 54 42 18 21 75 52 13 22 88 14 15 6 78 80 15 90 83 64 22 26 76 17 32 91 24 42 18 33 67 60 44 83 58 66 37 69 63 32 77 29 68 35 82 52 47 2 28 9 92 40 23 73 15 68 1 43 91 62 41 74 38 22 50 22 19 24 31 30 86 55 71 55 92 16 63 40 59 49 26 12 48 25 15 4 11 46 0 36 32'"
+            ]
+          },
+          "execution_count": 67,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "from random import randint, choice\n",
         "def get_sample_text():\n",
@@ -286,10 +590,18 @@
         "    upper = randint(99, 2000)\n",
         "    url = choice(urls)\n",
         "    data = requests.get(url).text\n",
-        "    data = data.replace(\"\\n\", \" \")\n",
+        "    data = data.replace(\"\\n\", \"\")\n",
         "    return data[lower:upper]\n",
         "\n",
-        "#TODO"
+        "#TODO\n",
+        "text = get_sample_text()\n",
+        "tokens = text.split()\n",
+        "unique_tokens = set(tokens)\n",
+        "mapping = {key:str(value) for value, key in enumerate(unique_tokens)}\n",
+        "for index in range(len(tokens)):\n",
+        "    tokens[index] = mapping[tokens[index]]\n",
+        "\n",
+        "\" \".join(tokens)"
       ]
     },
     {
